# docs/swagger.json
@@ -79,6 +79,43 @@
                 }
             }
         },
+        "/report": {
+            "post": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Report"
+                ],
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Year",
+                        "name": "year",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "integer",
+                        "description": "Month",
+                        "name": "month",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    },
+                    "400": {
+                        "description": "Bad Request"
+                    }
+                }
+            }
+        },
         "/reserve": {
             "post": {
                 "description": "Can use without balance, success",
@@ -121,6 +158,9 @@
                     "type": "integer"
                 },
                 "cost": {
+                    "type": "integer"
+                },
+                "datetime": {
                     "type": "integer"
                 },
                 "order_id": {
