# internal/model/reserve_bills.go
@@ -5,5 +5,6 @@ type ReserveBills struct {
 	OrderId   int `json:"order_id"`
 	ServiceId int `json:"service_id"`
 	Cost      int `json:"cost"`
+	Datetime  int64
 	User
 }
